decrease border width in game, fix whitespace password for chatroom

--- a/www/app/assets/stylesheets/game.scss
+++ b/www/app/assets/stylesheets/game.scss
@@ -33,7 +33,7 @@ $ratio: Min(1vh, 2vw);
 			.player_infos {
 				flex: 0.49;
 				text-align: center;
-				border-width: $border-width;
+				border-width: calc(0.75 * #{$border-width});
 				border-color: $border-color;
 				border-style: solid;
 				display: flex;
